refactor merchantservice get